--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.4.7",
     "@hookform/resolvers": "^2.7.1",
     "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
