--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.7",
+    "@babel/preset-env": "^7.1.6",
     "@hookform/resolvers": "^2.7.1",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.21.1",
+    "flow-bin": "^0.157.0",
     "graphql": "^15.5.1",
+    "lottie-react-native": "^4.0.3",
     "react": "17.0.1",
     "react-hook-form": "^7.12.2",
     "react-native": "0.64.2",
@@ -25,6 +28,7 @@
     "react-native-dropdown-picker": "^5.1.23",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.0",
+    "react-native-segmented-control-tab": "^3.4.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-toast-message": "^1.4.9",
     "react-redux": "^7.2.4",
@@ -35,9 +39,9 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/runtime": "^7.14.8",
-    "@react-native-community/eslint-config": "^3.0.0",
+    "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^27.0.6",
-    "eslint": "^7.32.0",
+    "eslint": "7.14.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.1"
