--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "react-native-date-picker": "^3.3.2",
     "react-native-dropdown-picker": "^5.1.23",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-toast-message": "^1.4.9",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
