--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-dropdown-picker": "^5.1.23",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-status-bar-height": "^2.6.0",
