--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.1",
     "react-hook-form": "^7.12.2",
     "react-native": "0.64.2",
+    "react-native-bouncy-checkbox": "^2.1.3",
     "react-native-date-picker": "^3.3.2",
     "react-native-dropdown-picker": "^5.1.23",
     "react-native-gesture-handler": "^1.10.3",
