--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "axios": "^0.21.1",
     "flow-bin": "^0.157.0",
     "graphql": "^15.5.1",
-    "lottie-ios": "3.2.3",
+    "lottie-ios": "^3.2.3",
     "lottie-react-native": "^4.0.3",
     "react": "17.0.1",
     "react-hook-form": "^7.12.2",
