--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@apollo/client": "^3.4.7",
+    "@apollo/client": "^3.4.8",
     "@babel/preset-env": "^7.1.6",
     "@hookform/resolvers": "^2.7.1",
     "@react-native-async-storage/async-storage": "react-native-async-storage/async-storage",
@@ -32,6 +32,7 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-date-picker": "^3.3.2",
     "react-native-dropdown-picker": "^5.1.23",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-ratings": "^8.1.0",
