--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "add": "^2.0.6",
     "axios": "^0.21.1",
     "flow-bin": "^0.157.0",
+    "formik": "^2.2.9",
     "graphql": "^15.5.1",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^4.0.3",
