--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^2.7.1",
     "@react-native-async-storage/async-storage": "react-native-async-storage/async-storage",
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.4",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
@@ -30,6 +31,7 @@
     "react": "17.0.1",
     "react-hook-form": "^7.12.2",
     "react-native": "0.64.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-bouncy-checkbox": "^2.1.3",
     "react-native-circular-progress": "^1.3.7",
     "react-native-date-picker": "^3.3.2",
@@ -42,6 +44,7 @@
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-segmented-control-tab": "^3.4.1",
+    "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.1",
