--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.4",
     "@react-navigation/drawer": "^6.1.4",
+    "@react-navigation/material-top-tabs": "^6.0.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
@@ -39,6 +40,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-pager-view": "^5.4.1",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.0",
@@ -49,6 +51,7 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^1.4.9",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
