--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-pager-view": "^5.4.1",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.2.0",
+    "react-native-redash": "^16.2.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-segmented-control-tab": "^3.4.1",
