--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "add": "^2.0.6",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "flow-bin": "^0.157.0",
     "formik": "^2.2.9",
     "graphql": "^15.5.1",
