--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-toast-message": "^1.4.9",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "yarn": "^1.22.11",
     "yup": "^0.32.9",
