--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "flow-bin": "^0.157.0",
     "formik": "^2.2.9",
     "graphql": "^15.5.1",
+    "jwt-decode": "^3.1.2",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^4.0.3",
     "react": "17.0.1",
