--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.6",
+    "react-native-keychain": "^8.0.0",
     "react-native-linear-gradient": "https://github.com/react-native-linear-gradient/react-native-linear-gradient#0e3af58",
     "react-native-pager-view": "^5.4.1",
     "react-native-ratings": "^8.1.0",
