--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flow-bin": "^0.157.0",
     "formik": "^2.2.9",
     "graphql": "^15.5.1",
+    "immutability-helper": "^3.1.1",
     "jwt-decode": "^3.1.2",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^4.0.3",
