--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^2.7.1",
     "@react-native-async-storage/async-storage": "react-native-async-storage/async-storage",
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/slider": "^4.1.10",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.4",
     "@react-navigation/drawer": "^6.1.4",
